dataset1235/2025-2/2318198438/users/1225947802/executions/2601575092_211162095.log
== RUN (2025-08-12 00:55:55)
-- CODE: 
print("universidade federal do amazonas')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("universidade federal do amazonas')
          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("universidade federal do amazonas')
          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 01:15:20)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 01:14:57)
-- CODE: 
print("Universidade federal do Amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 01:15:02)
-- CODE: 
print("Universidade federal do Amazonas")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade federal do Amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 01:15:23)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:56:13)
-- CODE: 
print("universidade federal do amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 01:12:00)
-- CODE: 
print("universidade federal do Amazonas")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do Amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:55:39)
-- CODE: 
print("universidade federal do amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:57:40)
-- CODE: 
print("universidade federal do Amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
